--- a/analisis_ice-shop.ipynb
+++ b/analisis_ice-shop.ipynb
@@ -64,12 +64,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "# Importo las librerías\n",
+    "# Importar las librerías\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
@@ -87,11 +87,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Importo los datos de juegos \n",
+    "# Importar los datos de juegos \n",
     "games=pd.read_csv('games.csv')"
    ]
   },
